# atom_ctx

./: .gitignore  .ingest_record.json  .pr_agent.toml  CONTRIBUTING.md  CONTRIBUTING_CN.md  CONTRIBUTING_JA.md  Cargo.toml  Dockerfile  MANIFEST.in  Makefile  README.md  README_CN.md  README_JA.md  docker-compose.yml  pyproject.toml  recipe_agentscope_recall.py  setup.py  安装.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/act/: build-wheel.event.json
.github/workflows/: _build.yml  _publish.yml  _test_full.yml  api_test.yml  build-docker-image.yml  build-wheel.yml  release.yml  rust-cli.yml
apps/: agentscope_recall_web.py
apps/static/: agentscope_recall.css  agentscope_recall.js
apps/templates/: agentscope_recall.html
atom_ctx/: __init__.py  _version.py  agfs_manager.py  async_client.py  client.py  sync_client.py
atom_ctx/client/: __init__.py  local.py  session.py
atom_ctx/console/: README.md  __init__.py  app.py  bootstrap.py  config.py
atom_ctx/core/: __init__.py  building_tree.py  context.py  directories.py
atom_ctx/crypto/: __init__.py  config.py  encryptor.py  providers.py
atom_ctx/eval/: README.md  __init__.py
atom_ctx/message/: __init__.py  message.py  part.py
atom_ctx/parse/: __init__.py  base.py  converter.py  custom.py  directory_scan.py  registry.py  tree_builder.py  vlm.py
atom_ctx/prompts/: __init__.py  manager.py
atom_ctx/resource/: __init__.py  watch_manager.py  watch_scheduler.py
atom_ctx/retrieve/: __init__.py  hierarchical_retriever.py  intent_analyzer.py  retrieval_stats.py
atom_ctx/server/: __init__.py  api_keys.py  app.py  auth.py  bootstrap.py  config.py  dependencies.py  identity.py  local_input_guard.py  models.py  telemetry.py
atom_ctx/service/: __init__.py  core.py  debug_service.py  fs_service.py  pack_service.py  relation_service.py  resource_service.py  search_service.py  session_service.py  task_tracker.py
atom_ctx/session/: __init__.py  compressor.py  compressor_v2.py  memory_archiver.py  memory_deduplicator.py  memory_extractor.py  session.py
atom_ctx/storage/: __init__.py  collection_schemas.py  ctx_fs.py  local_fs.py  stats_aggregator.py  viking_vector_index_backend.py  vikingdb_manager.py
atom_ctx/telemetry/: __init__.py  context.py  execution.py  resource_summary.py
atom_ctx/utils/: __init__.py  agfs_utils.py  circuit_breaker.py  code_hosting_utils.py  embedding_utils.py  media_processor.py  process_lock.py  resource_processor.py  skill_processor.py  summarizer.py
atom_ctx_cli/: doctor.py  exceptions.py  rust_cli.py  server_bootstrap.py
atom_ctx_cli/client/: __init__.py  base.py  http.py  sync_http.py
atom_ctx_cli/retrieve/: __init__.py  types.py
atom_ctx_cli/session/: user_id.py
atom_ctx_cli/utils/: __init__.py  downloader.py  extractor.py  llm.py  logger.py  rerank.py  rerank_litellm.py  rerank_openai.py  storage.py  uri.py
build_support/: __init__.py  versioning.py  x86_profiles.py
crates/ctx_cli/: Cargo.toml  README.md  build.rs  install.sh  test_ctx.sh
deploy/helm/: README.md
docs/design/: memory-extractor-optimization.md  multi-tenant-design.md  openclaw-context-engine-refactor.md  openclaw-integration.md
examples/: quick_start.py  watch_resource_example.py
examples/basic-usage/: README.md  README_CN.md  basic_usage.py
examples/claude-code-memory-plugin/: .mcp.json  MIGRATION.md  README.md  package-lock.json  package.json
examples/claude-memory-plugin/: README_CN.md
examples/cloud/: GUIDE.md  alice.py  bob.py  setup_users.py
examples/common/: __init__.py  boring_logging_config.py  recipe.py  resource_manager.py
examples/k8s-helm/: Chart.yaml  README.md  README_CN.md  values.yaml
examples/mcp-query/: README.md  README_CN.md  pyproject.toml  server.py
examples/misc/: memory_demo.py
examples/multi_tenant/: README.md  admin_workflow.py  admin_workflow.sh  pyproject.toml
examples/openclaw-plugin/: INSTALL-AGENT.md  INSTALL-ZH.md  INSTALL.md  README.md  README_CN.md  client.ts  config.ts  context-engine.ts  demo-memory-ajie.py  demo-memory-xiaomei.py  index.ts  install-manifest.json  install.sh  openclaw.plugin.json  package-lock.json  package.json  process-manager.ts  test-memory-chain.py  test-tool-capture.py  text-utils.ts
examples/opencode-memory-plugin/: INSTALL-ZH.md  README.md  README_CN.md  ctx-memory.ts
examples/server_client/: README.md  client_async.py  client_cli.sh  client_sync.py  pyproject.toml
scripts/ci/: build-wheel.sh  publish-wheel.sh
src/: CMakeLists.txt  abi3_engine_backend.cpp  abi3_x86_caps.cpp
src/index/detail/vector/common/: space_int8.h  space_ip.h  space_l2.h  vector_base.h
tests/: README.md  __init__.py  conftest.py  test_code_hosting_utils.py  test_config_loader.py  test_edge_cases.py  test_edge_cases_simple.py  test_memory_lifecycle.py  test_server_config_loader.py  test_session_async_commit.py  test_session_task_tracking.py  test_task_tracker.py  test_telemetry_runtime.py  test_upload_utils.py
tests/agfs/: conftest.py  test_fs_binding.py  test_fs_binding_s3.py  test_fs_local.py  test_fs_s3.py
tests/api_test/: README.md  conftest.py  local-test.sh
tests/cli/: conftest.py  test_doctor.py  test_user_identifier.py
tests/client/: test_chat_integration.py  test_file_operations.py  test_filesystem.py  test_http_client_config.py  test_http_client_local_upload.py  test_import_export.py  test_lifecycle.py  test_relations.py  test_resource_management.py  test_search.py  test_skill_management.py  test_windows_path_handling.py
tests/eval/: test_ragas_basic.py  test_ragas_eval.py  test_ragas_validation.py
tests/integration/: conftest.py  test_add_resource_index.py  test_compressor_v2_e2e.py  test_compressor_v2_event_span_multiple_turns.py  test_compressor_v2_tool_skill_memory.py  test_compressor_v2_xiaomei.py  test_encryption_integration.py  test_full_workflow.py  test_gemini_ctx_it.py  test_gemini_e2e.py  test_gemini_embedding_it.py  test_http_integration.py  test_quick_start_lite.py  test_vault_encryption_integration.py  test_volcengine_kms_encryption_integration.py  (+1 more)
(+499 files in other folders)
